# auto-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: README.md  default.yaml  quickstart.yaml
src/auto_ml_pipeline/: api.py  cli.py  config.py  data_cleaning.py  evaluation.py  feature_engineering.py  feature_selection.py  io_utils.py  logging_utils.py  metrics.py  models.py  reporting.py  selection_utils.py  task_inference.py  trainer.py
src/auto_ml_pipeline/templates/: report_template.html
src/auto_ml_pipeline/transformers/: __init__.py  cleaning.py  datetime.py  encoding.py  outliers.py  selection.py
tests/: test_smoke.py
tests/test_core/: __init__.py  test_evaluation.py  test_metrics.py  test_models.py  test_task_inference.py
tests/test_data_cleaning/: test_clean_data.py  test_clean_special_null_values.py  test_drop_duplicates.py  test_ensure_target_exists.py  test_handle_inf_values.py  test_handle_mixed_types.py  test_remove_constant_features.py  test_remove_high_missing_features.py  test_remove_high_missing_rows.py  test_remove_id_columns.py  test_remove_missing_target.py  test_standardize_column_names.py  test_transformers_cleaning.py  test_transformers_datetime.py  test_trim_whitespace.py  test_validate_dataset_size.py
tests/test_feature_engineering/: test_build_preprocessor.py  test_categorize_columns.py  test_column_types.py  test_combine_text_columns.py  test_helper_functions.py  test_skew.py  test_transformers.py  test_transformers_encoding.py  test_transformers_features.py  test_transformers_outliers.py
tests/test_feature_selection/: test_build_selector.py
tests/test_integration/: test_workflows.py
