[project]
name = "auto-ml-pipeline"
version = "0.1.0"
description = "Automated Machine Learning Pipeline"
authors = [
    {name = "Bartosz Zielonka",email = "bzielonka1@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "typer (>=0.16.1,<0.17.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "auto_ml_pipeline", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.10"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
