[project]
name = "auto-ml-pipeline"
version = "0.1.0"
description = "Automated Machine Learning Pipeline"
authors = [{ name = "Bartosz Zielonka", email = "bzielonka1@proton.me" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "typer (>=0.16.1,<0.20.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "feature-engine (>=1.9.3,<2.0.0)",
    "catboost>=1.2.8",
    "matplotlib>=3.10.7",
    "shap>=0.49.1",
    "plotly>=6.3.1",
    "jinja2>=3.1.6",
    "fastapi>=0.120.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "httpx>=0.28.1",
]

[project.scripts]
auto-ml = "auto_ml_pipeline.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_ml_pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["union-attr", "arg-type"]
